#1369 Errada traspàs documents alta SISTRA TE info pròpia
Marcar error arxiu i opció per migrar un document.

Task-url: https://github.com/GovernIB/helium/issues/1369

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -286,7 +286,10 @@ expedient.document.data=Data
 expedient.document.pipella.general=General
 expedient.document.pipella.nti=Metadades NTI
 expedient.document.info.etiqueta.notificat=NOT
-
+expedient.document.arxiu.error.uuidnoexistent=El document no té UUID d'Arxiu
+expedient.document.arxiu.error.uuidnoexistent.info=S'ha detectat que l'expedient està integrat a l'Arxiu però el document no té UUID d'Arxiu i per tant no està guardat a l'arxiu. Podeu provar d'incorporar-lo per guardar-lo a l'Arxiu.
+expedient.document.arxiu.migrar.arxiu=Acció per migrar el document cap a l'Arxiu i incorporar-lo a l'expedient.
+expedient.document.arxiu.migrar.success=Document incorporat correctament a l'Axiu
 expedient.document.form.camp.arxiu=Arxiu
 expedient.document.form.camp.amb.firma=Arxiu amb firma?
 expedient.document.form.camp.tipus.firma=Tipus de firma
@@ -1813,6 +1816,7 @@ comu.boto.tornar=Tornar
 comu.boto.importar.dades=Importar dades
 comu.boto.exportar.dades=Exportar dades
 comu.boto.descarregar=Descarregar
+comu.boto.migrar=Migrar
 comu.tots=Tots
 comu.totes=Totes
 comu.arxiu=Arxiu
