#1380 Modificar integració NOTIB codis independents
task-url: https://github.com/GovernIB/helium/issues/1380

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1340,7 +1340,7 @@ expedient.tipus.integracio.notificacio.avisSmsText=Text SMS d'avís
 expedient.tipus.integracio.notificacio.oficiTitol=Títol de l'ofici
 expedient.tipus.integracio.notificacio.oficiText=Text de l'ofici
 
-expedient.tipus.integracio.notib.organisme.emisor=Codi DIR3 de l'organisme emisor
+expedient.tipus.integracio.notib.organisme.emisor=Codi DIR3 de l'organisme emissor
 expedient.tipus.integracio.notib.sia.codiprocediment=Codi procediment SIA
 expedient.tipus.integracio.notib.exp.unitatorganitzativa=Seu unitat organitzativa
 expedient.tipus.integracio.notib.sistra.codiprocediment=Codi procediment SEU
