#1335 Helium com a backoffice de Distribucio
Validació i delall de firmes

Task-url: https://github.com/GovernIB/helium/issues/1335

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2277,7 +2277,7 @@ nti.tipo.firma.CADES_DET=CAdES detached
 nti.tipo.firma.CADES_ATT=CAdES attached
 nti.tipo.firma.PADES=PAdES
 nti.tipo.firma.SMIME=S-MIME
-nti.tipo.firma.ODT=PDT
+nti.tipo.firma.ODT=ODT
 nti.tipo.firma.OOXML=OOXML
 
 seu.idioma.CA=Català
