--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1829,8 +1829,7 @@ anotacio.llistat.accio.esborrar.validacio.pendent=Només es poden esborrar anotac
 anotacio.llistat.accio.esborrar.success=La petició d''anotació de registre "{0}" ha estat esborrada correctament
 anotacio.llistat.accio.esborrar.error=Error esborrant l''anotació amb id {0}: {1}
 
-anotacio.detalls.titol
-anotacio.detalls.titol=Detalls de l'anotació de registre
+anotacio.detalls.titol=Detalls de l''anotació de registre {0}
 anotacio.detalls.pipella.informacio=Informació
 anotacio.detalls.pipella.interessats=Interessats
 anotacio.detalls.pipella.annexos=Annexos
