--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1997,6 +1997,10 @@ anotacio.annex.detalls.camp.firmaDetalls.nif=NIF
 anotacio.annex.detalls.camp.firmaDetalls.nom=Nom
 anotacio.annex.detalls.camp.firmaDetalls.emissor=Emissor
 
+anotacio.annex.detalls.annex.error=El processament d'aquest annex ha produit error
+anotacio.annex.detalls.annex.accio.reintentar=Reintentar processament
+
+
 
 anotacio.interessat.tipus.enum.PERSONA_FISICA=Persona física
 anotacio.interessat.tipus.enum.PERSONA_JURIDICA=Persona jurídica
