#1335 Helium com a backoffice de Distribucio
Reintentar annexos pendents.

Task-url: https://github.com/GovernIB/helium/issues/1335

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1999,8 +1999,9 @@ anotacio.annex.detalls.camp.firmaDetalls.emissor=Emissor
 
 anotacio.annex.detalls.annex.error=El processament d'aquest annex ha produit error
 anotacio.annex.detalls.annex.accio.reintentar=Reintentar processament
-
-
+anotacio.annex.descarregar.error=S''ha produït un error descarregant l'annex: {0}
+anotacio.annex.reintentar.success=L'annex s'ha processat correctament
+anotacio.annex.reintentar.error=S''ha produït un error reintentant el processament de l''annex: {0}
 
 anotacio.interessat.tipus.enum.PERSONA_FISICA=Persona física
 anotacio.interessat.tipus.enum.PERSONA_JURIDICA=Persona jurídica
