#1390 El perfil referencia a una consulta esborrada i provoca errors

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -649,6 +649,9 @@ info.token.desactivar.confirmacio=Esteu segur desactivar aquest token?
 txt.home=Home
 txt.dona=Dona
 info.perfil.guardat=El perfil s'ha guardat amb èxit
+info.perfil.entorn.error=El perfil de l''usuari té configurat un entorn per defecte amb codi "{0}" el qual s''ha esborrat o no té permís d''accés. Actualtizeu el perfil per evitar errors
+info.perfil.tipus.error=El perfil de l''usuari té configurat un tipus d''expedient per defecte amb id {0} el qual s''ha esborrat o no té permís d''accés. Actualtizeu el perfil per evitar errors
+info.perfil.consulta.error=El perfil de l''usuari té configurada una consulta per defecte amb id {0} que no es troba, s''ha esborrat o ha estat desactivada. Actualtizeu el perfil per evitar errors
 info.contrasenya.modificat=La contrasenya s'ha modificat amb èxit
 
 info.rol.guardat=El rol s'ha guardat correctament
