#1395 Marcar dins la gestió de l'expedient en cas d'estar anul·lat
Task-url: https://github.com/GovernIB/helium/issues/1395

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -377,6 +377,7 @@ expedient.info.comentari=Comentari
 expedient.info.alertes=Alertes
 expedient.info.alertes.text=Aquest expedient té alertes. 
 expedient.info.alertes.complement= pendents de llegir.
+expedient.info.reindexacio=Reindexació
 expedient.info.etiqueta.nti=NTI
 expedient.info.etiqueta.notificacions=Notificacions
 expedient.info.etiqueta.arxiu=Arxiu
@@ -1771,6 +1772,7 @@ expedient.boto.nou_document=Nou document
 expedient.boto.nova_dada=Nova dada
 expedient.boto.veure_errors=Veure errors
 expedient.boto.veure_alertes=Veure alertes
+expedient.boto.veure_dades=Veure dades
 
 expedient.nova.data.nova=Nova variable
 expedient.nova.data.no.definida=Variable no definida
