--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -196,7 +196,7 @@ expedient.info.identificacio=Identificació
 expedient.info.tipus=Tipus
 expedient.info.aturat=Aturat
 expedient.info.errors=Errors
-expedient.info.anulat=Anul\uFFFDlat
+expedient.info.anulat=Anul·lat
 expedient.info.tramit_origen=Tràmit d'origen
 expedient.info.iniciat_per=Iniciat per
 expedient.info.numero_registre=Número de registre
