Revisar que l'expedient es marqui amb error de reindexació si hi ha cap error #1396

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -642,6 +642,11 @@ expedient.anotacio.llistat.columna.extracte=Extracte
 expedient.anotacio.llistat.columna.estat=Estat
 expedient.anotacio.llistat.columna.dataProcessament=Processada
 
+expedient.lucene.titol=Dades indexades a lucene per l''expedient {0}
+expedient.lucene.reindexacio.asincrona.data=L''expedient està pendent de reindexar amb data {0,date,dd/MM/yyyy HH:mm:ss}
+expedient.lucene.reindexacio.error=L'expedient està marcat amb error de reindexació
+expedient.lucene.error.varis=S''han trobat {0} resultats per l''identificador d''expedient {1}. S''ha de reindexar per corregir aquest error.
+
 expedient.tipus.llistat.titol=Tipus d'expedient
 expedient.tipus.llistat.columna.codi=Codi
 expedient.tipus.llistat.columna.titol=Títol
