#1396 Revisar marcar amb error de reindexació en cas d'error
Task-url: https://github.com/GovernIB/helium/issues/1396

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -453,6 +453,7 @@ etiqueta.exp.responsable=Responsable de l'expedient
 etiqueta.exp.data_ini=Data d'inici de l'expedient
 etiqueta.exp.tipus=Tipus d'expedient
 etiqueta.exp.estat=Estat de l'expedient
+etiqueta.exp.errorsReindexacio=Camps amb error de reindexació
 info.camp.consulta.afegit=S'ha afegit el camp a la consulta
 info.camp.consulta.esborrat=El camp de la consulta s'ha esborrat correctamentinfo.param.consulta.afegit=S'ha afegit el paràmetre a la consulta
 info.param.consulta.afegit=S'ha afegit el paràmetre a la consulta
