--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -59,6 +59,7 @@ expedient.consulta.anulats.tots=Actius i anul·lats
 expedient.consulta.anulats.mostrar=Mostrar expedients
 expedient.consulta.params.modal.titol=Paràmetres de l'informe
 expedient.consulta.reindexacio.asincrona=L'expedient està pendent de reindexar
+expedient.consulta.reindexacio.asincrona.amb.data=L'expedient està pendent de reindexar amb data
 expedient.consulta.reindexacio.asincrona.data=L''expedient està pendent de reindexar amb data {0,date,dd/MM/yyyy HH:mm:ss}
 expedient.consulta.reindexacio.error=Error de reindexació.
 expedient.consulta.reindexacio.error.full=L'expedient no s'ha pogut reindexar a causa d'un error intern. Consulti els logs per a més informació
@@ -556,6 +557,7 @@ info.accio.massiu.migrar_expedient=S&#39;ha programat l&#39;acció de migrar a l&
 info.expedient.desanulat = L'expedient s'ha activat correctament
 info.dada.creat=La dada s'ha creat correctament
 info.expedient.reindexat=L'expedient s&#39;ha reindexat correctament
+info.expedient.reindexat.error=L'expedient s&#39;ha reindexat correctament amb algun error, s&#39;han de revisar les dades reindexades o els logs
 info.expedient.finalitzat=L'expedient s&#39;ha finalitzat correctament
 info.expedient.buidatlog=La informació de registre de l'expedient s'ha eliminat correctament
 info.expedient.migrat.arxiu=L'expedient s'ha migrat correctament a l'arxiu
