--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1984,6 +1984,8 @@ anotacio.annex.detalls.camp.ntiElaboracioEstat.COPIA_ELECT_AUTENTICA_CANVI_FORMA
 anotacio.annex.detalls.camp.ntiElaboracioEstat.COPIA_ELECT_AUTENTICA_PAPER=Còpia electrònica autèntica de document paper
 anotacio.annex.detalls.camp.ntiElaboracioEstat.COPIA_ELECT_AUTENTICA_PARCIAL=Còpia electrònica parcial autèntica
 anotacio.annex.detalls.camp.ntiElaboracioEstat.ALTRES=Altres
+anotacio.annex.detalls.camp.arxiu.uuid=Identificador dins l'Arxiu
+anotacio.annex.detalls.camp.arxiu.uuid.buit.avis=Aquest annex no està guardat dins l'Arxiu
 anotacio.annex.buit=Aquesta anotació no té cap document annex
 
 anotacio.annex.detalls.camp.firma=Firma
@@ -2006,6 +2008,7 @@ anotacio.annex.detalls.camp.firmaDetalls.emissor=Emissor
 
 anotacio.annex.detalls.annex.error=El processament d'aquest annex ha produit error
 anotacio.annex.detalls.annex.accio.reintentar=Reintentar processament
+anotacio.annex.detalls.annex.firmes.consultant=Validant les firmes del document...
 anotacio.annex.descarregar.error=S''ha produït un error descarregant l'annex: {0}
 anotacio.annex.reintentar.success=L'annex s'ha processat correctament
 anotacio.annex.reintentar.error=S''ha produït un error reintentant el processament de l''annex: {0}
