#1415 Afegir avís consultes expedients pedents o error reindexació
Task-url: https://github.com/GovernIB/helium/issues/1415

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -700,6 +700,9 @@ expedient.tipus.info.permis.no=No disposa de permís per a modificar l'expedient
 expedient.info.propagar.handlers=Propagar handlers
 expedient.info.propagar.handlers.info=Propaga els handlers de les darreres versions de les definicions de procés del tipus d'expedient a les versions anteriors escollides
 
+expedient.consulta.alerta.errorsReindexacio.tip=Premi per consultar expediens amb errors de reindexació.
+expedient.consulta.alerta.errorsReindexacio=Actualment hi ha {0} expedients amb error de reindexació que podrien afectar al resultat de la consulta.
+
 expedient.tipus.form.titol.nou=Crear nou tipus d'expedient
 expedient.tipus.form.titol.modificar=Modificar tipus d'expedient
 expedient.tipus.form.camp.codi=Codi
