#1401 Modificar etiquetes tasca i tipus tasca del filtre de tasques
Task-url: https://github.com/GovernIB/helium/issues/1401

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1700,11 +1700,11 @@ definicio.proces.desplegar.validacio.error.lectura=Error llegint l'arxiu a impor
 definicio.proces.desplegar.validacio.permisos=No te permisos per realitzar aquesta acció
 
 tasca.llistat.titol=Consulta de tasques
-tasca.llistat.filtre.camp.titol=Tasca
+tasca.llistat.filtre.camp.titol=Tasca títol
 tasca.llistat.filtre.camp.expedient=Expedient
 tasca.llistat.filtre.camp.prioritat=Prioritat
 tasca.llistat.filtre.camp.tipexp=Tipus d'expedient
-tasca.llistat.filtre.camp.tasca=Tipus de tasca
+tasca.llistat.filtre.camp.tasca=Tasca
 tasca.llistat.filtre.camp.datcre=Interval dates de creació
 tasca.llistat.filtre.camp.datcre.ini=Data creació inicial
 tasca.llistat.filtre.camp.datcre.fin=Data creació final
