#1404 Revisar llistat d'execucions massives de l'entorn
Task-url: https://github.com/GovernIB/helium/issues/1404

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -779,7 +779,8 @@ comuns.tract_dona=Tractament dona
 comuns.tract_home=Tractament home
 comuns.massiu=Execucions massives
 comuns.massiu.usuari = Execucions massives de l'usuari
-comuns.massiu.entorn = Execucions massives de l'entorn
+comuns.massiu.entorn = Execucions massives de l''entorn {0}
+comuns.massiu.helium = Execucions massives d'Helium
 comuns.tancar=Tancar
 comuns.progres=Progrés
 comuns.refrescar=Refrescar
