#1421 Permetre consultar expededients reindexació pendent consultes
Task-url: https://github.com/GovernIB/helium/issues/1421

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -703,6 +703,9 @@ expedient.info.propagar.handlers.info=Propaga els handlers de les darreres versi
 expedient.consulta.alerta.errorsReindexacio.tip=Premi per consultar expediens amb errors de reindexació.
 expedient.consulta.alerta.errorsReindexacio=Actualment hi ha {0} expedients amb error de reindexació que podrien afectar al resultat de la consulta.
 
+expedient.consulta.alerta.pendentsReindexacio.tip=Premi per consultar expediens pendents de reindexació.
+expedient.consulta.alerta.pendentsReindexacio=Actualment hi ha {0} expedients pendents de reindexació que podrien afectar al resultat de la consulta.
+
 expedient.tipus.form.titol.nou=Crear nou tipus d'expedient
 expedient.tipus.form.titol.modificar=Modificar tipus d'expedient
 expedient.tipus.form.camp.codi=Codi
@@ -2107,6 +2110,7 @@ comu.processant=Processant
 comu.boto.detalls=Detalls
 comu.boto.acceptar=Acceptar
 comu.boto.rebutjar=Rebutjar
+comu.darrera.actualitzacio=Darrera actualització
 
 comu.true=Sí
 comu.false=No
