#1422 Nova opció per administradors per veure les reindexacions pendents

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -11,6 +11,7 @@ decorator.menu.consultes.generic=Consulta general
 decorator.menu.disseny.tipus.expedient=Tipus d'expedient
 decorator.menu.administracio=Administració
 decorator.menu.administracio.tasques.execucio=Tasques en execució
+decorator.menu.administracio.reindexacions=Reindexacions pendents
 decorator.menu.administracio.monitor.integracio=Monitor integracions
 decorator.menu.administracio.monitor.domini=Monitor dominis
 decorator.logo.govern=Govern de les Illes Balears
@@ -2306,6 +2307,14 @@ seu.idioma.CA=Català
 seu.idioma.ES=Espanyol
 
 variable.helper.error.recuperant.valor=Error convertint el valor a variable tipus {0} {1}
+
+reindexacions.titol=Reindexacions pendents i errors
+reindexacions.titol.helium=Reindexacions pendents i errors d'Helium
+reindexacions.titol.entorn=Reindexacions pendents i errors de l''entorn {0}
+reindexacions.tab.cua=Cua
+reindexacions.tab.expedients=Expedients
+reindexacions.cua.pendents=Pendents
+reindexacions.taula.fila.title=Premi sobre la fila per consultar els expedients del tipus d'expedient
 
 Pattern=El format no és correcte
 typeMismatch=El format no és correcte
