#1422 Nova opció per administradors per veure les reindexacions pendents
Correcció per reindexar expedients amb data de reindexació

Task-url: https://github.com/GovernIB/helium/issues/1422

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2104,6 +2104,7 @@ comu.boto.importar.dades=Importar dades
 comu.boto.exportar.dades=Exportar dades
 comu.boto.descarregar=Descarregar
 comu.boto.processar=Processar
+comu.cap=Cap
 comu.tots=Tots
 comu.totes=Totes
 comu.arxiu=Arxiu
@@ -2315,6 +2316,20 @@ reindexacions.tab.cua=Cua
 reindexacions.tab.expedients=Expedients
 reindexacions.cua.pendents=Pendents
 reindexacions.taula.fila.title=Premi sobre la fila per consultar els expedients del tipus d'expedient
+reindexacions.dataConsulta=Data de la consulta
+reindexacions.pendentsCua=Expedients pendents en la cua de reindexació
+reindexacions.columna.entorn=Entorn
+reindexacions.columna.tipus=Tipus d'expedient
+reindexacions.columna.codi=Codi
+reindexacions.columna.nom=Nom
+reindexacions.columna.errors=Errors
+reindexacions.columna.pendents=Pendents
+reindexacions.columna.total=Total
+reindexacions.llistatTipusSeleccionat=Llistat d'expedients pel tipus seleccionat
+
+
+
+
 
 Pattern=El format no és correcte
 typeMismatch=El format no és correcte
