#1422 Nova opció per administradors per veure les reindexacions pendents
Opció per reindexar expedients amb errors

Task-url: https://github.com/GovernIB/helium/issues/1422

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -11,7 +11,7 @@ decorator.menu.consultes.generic=Consulta general
 decorator.menu.disseny.tipus.expedient=Tipus d'expedient
 decorator.menu.administracio=Administració
 decorator.menu.administracio.tasques.execucio=Tasques en execució
-decorator.menu.administracio.reindexacions=Reindexacions pendents
+decorator.menu.administracio.reindexacions=Reindexacions asíncrones
 decorator.menu.administracio.monitor.integracio=Monitor integracions
 decorator.menu.administracio.monitor.domini=Monitor dominis
 decorator.logo.govern=Govern de les Illes Balears
@@ -2310,14 +2310,14 @@ seu.idioma.ES=Espanyol
 variable.helper.error.recuperant.valor=Error convertint el valor a variable tipus {0} {1}
 
 reindexacions.titol=Reindexacions pendents i errors
-reindexacions.titol.helium=Reindexacions pendents i errors d'Helium
-reindexacions.titol.entorn=Reindexacions pendents i errors de l''entorn {0}
+reindexacions.titol.helium=Reindexacions asíncrones pendents i amb errors d'Helium
+reindexacions.titol.entorn=Reindexacions asíncrones pendents i amb errors de l''entorn {0}
 reindexacions.tab.cua=Cua
 reindexacions.tab.expedients=Expedients
 reindexacions.cua.pendents=Pendents
 reindexacions.taula.fila.title=Premi sobre la fila per consultar els expedients del tipus d'expedient
 reindexacions.dataConsulta=Data de la consulta
-reindexacions.pendentsCua=Expedients pendents en la cua de reindexació
+reindexacions.pendentsCua=Expedients pendents en la cua de reindexacions asíncrones
 reindexacions.columna.entorn=Entorn
 reindexacions.columna.tipus=Tipus d'expedient
 reindexacions.columna.codi=Codi
@@ -2326,7 +2326,11 @@ reindexacions.columna.errors=Errors
 reindexacions.columna.pendents=Pendents
 reindexacions.columna.total=Total
 reindexacions.llistatTipusSeleccionat=Llistat d'expedients pel tipus seleccionat
-
+reindexacions.boto.reindexaErrors=Reindexar
+reindexacions.boto.reindexaErrors.title=Reindexar expedients amb error de reindexació. Es cridarà a l'acció de reindexar l'expedient
+reindexacions.boto.reindexarCancelar=Cancel·lar
+reindexacions.boto.reindexarCancelar.title=Cancel·la les peticions de reindexació
+reindexacions.boto.reindexarCancelar.cancelant=Cancel·lant...
 
 
 
