#1399 Modificar la obligatorietat metadades nti adjuntant
Task-url: https://github.com/GovernIB/helium/issues/1399

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2293,6 +2293,12 @@ nti.document.format.MP3=MP3. MPEG-1 Audio Layer 3
 nti.document.format.OGG=OGG-Vorbis
 nti.document.format.MP4V=MPEG-4 MP4 vídeo
 nti.document.format.WEBM=WebM
+#FORMATS NO DEFINITS AL CATÀLEG GENERAL DE L'ENI
+nti.document.format.DOC=DOC
+nti.document.format.XLS=XLS
+nti.document.format.MDB=MDB
+nti.document.format.ALTRES=ALTRES
+
 
 nti.tipo.firma.CSV=CSV
 nti.tipo.firma.XADES_DET=XAdES detached
