#1428 No funciona "reintentar processament" annexos anotacions
- Mostrar annexos a la pestanya documents
- Afegir icona per informar que són annexos
- Arreglar reintentar processament
- Mostrar icones en cas d'annex amb error
- Contemplar annexos amb firmes

Task-url: https://github.com/GovernIB/helium/issues/1428

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -288,6 +288,8 @@ expedient.document.data=Data
 expedient.document.pipella.general=General
 expedient.document.pipella.nti=Metadades NTI
 expedient.document.info.etiqueta.notificat=NOT
+expedient.document.info.etiqueta.anotacio=AN
+expedient.document.info.etiqueta.anotacio.title=Document annex de l''anotació {0}
 expedient.document.arxiu.error.uuidnoexistent=El document no té UUID d'Arxiu
 expedient.document.arxiu.error.uuidnoexistent.info=S'ha detectat que l'expedient està integrat a l'Arxiu però el document no té UUID d'Arxiu i per tant no està guardat a l'arxiu. Podeu provar d'incorporar-lo per guardar-lo a l'Arxiu.
 expedient.document.arxiu.migrar.arxiu=Acció per migrar el document cap a l'Arxiu i incorporar-lo a l'expedient.
@@ -643,6 +645,7 @@ expedient.anotacio.llistat.columna.data=Data
 expedient.anotacio.llistat.columna.extracte=Extracte
 expedient.anotacio.llistat.columna.estat=Estat
 expedient.anotacio.llistat.columna.dataProcessament=Processada
+expedient.anotacio.llistat.error.annexos=L'anotació conté error amb alguns annexos que poden no haver esat incorporats a l'arxiu.
 
 expedient.lucene.titol=Dades indexades a lucene per l''expedient {0}
 expedient.lucene.reindexacio.asincrona.data=L''expedient està pendent de reindexar amb data {0,date,dd/MM/yyyy HH:mm:ss}
@@ -1837,7 +1840,7 @@ anotacio.llistat.columna.dataProcessament=Processada
 anotacio.llistat.columna.expedientTipus=Expedient Tipus
 anotacio.llistat.columna.expedient=Expedient
 
-anotacio.llistat.accio.consultar=Gestionar
+anotacio.llistat.accio.expedient=Expedient
 anotacio.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquesta petició petició d'anotació? Aquesta acció no es pot tornar enrera una vegada executada.
 anotacio.llistat.accio.esborrar.validacio.pendent=Només es poden esborrar anotacions pendents
 anotacio.llistat.accio.esborrar.success=La petició d''anotació de registre "{0}" ha estat esborrada correctament
@@ -2013,7 +2016,8 @@ anotacio.annex.detalls.camp.firmaDetalls.nif=NIF
 anotacio.annex.detalls.camp.firmaDetalls.nom=Nom
 anotacio.annex.detalls.camp.firmaDetalls.emissor=Emissor
 
-anotacio.annex.detalls.annex.error=El processament d'aquest annex ha produit error
+anotacio.annex.detalls.annex.error=Aquest annext conté un error: {0}
+anotacio.annex.detalls.annex.processament.error=El processament d'aquest annex ha produit error
 anotacio.annex.detalls.annex.accio.reintentar=Reintentar processament
 anotacio.annex.detalls.annex.firmes.consultant=Validant les firmes del document...
 anotacio.annex.descarregar.error=S''ha produït un error descarregant l'annex: {0}
