Correccions proves Helium 3.2.110 (2020.11.16 13:00):
- Alerta si quan s'incorpora una anotació a un expedients hi ha erros
amb els annexos
- Copiar el títol del tipus d'expedient en les importacions

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2047,6 +2047,7 @@ anotacio.form.acceptar.noaccio=No s'ha seleccionat cap acció per realitzar.
 anotacio.form.acceptar.guardar.success=S''han guardat correctament les dades per l''anotació "{1}"
 anotacio.form.acceptar.crear.success=S''ha creat correctament l''expedient "{0}" per l''anotació "{1}"
 anotacio.form.acceptar.incorporar.success=L''anotació "{0}" s''ha incorporat correctament a l''epedient "{1}"
+anotacio.form.acceptar.incorporar.errorAnnexos=L''anotació "{0}" conté annexos que no s''han pogut incorporar a l''expedinent "{1}" per algun error. S'han de revisar i reprocessar-los.  
 anotacio.form.acceptar.error=S''ha produït un error durant l''acció: "{0}" - {1}
 
 anotacio.acceptar.validacio=Errors de validació durant el processament de l'anotació
