--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2342,7 +2342,8 @@ reindexacions.boto.reindexaErrors.title=Reindexar expedients amb error de reinde
 reindexacions.boto.reindexarCancelar=Cancel·lar
 reindexacions.boto.reindexarCancelar.title=Cancel·la les peticions de reindexació
 reindexacions.boto.reindexarCancelar.cancelant=Cancel·lant...
-reindexacions.boto.aturar=Aturar o reempendre la tasca de reindexacions asíncrones
+reindexacions.boto.reempendre=Reempendre la tasca en segon pla de reindexacions asíncrones
+reindexacions.boto.aturar=Aturar la tasca en segon pla de reindexacions asíncrones
 reindexacions.boto.aturar.confirm=Esteu segur que voleu aturar la tasca en segon pla de reindexacions asíncrones? Els canvis en les dades dels expedients deixaran d'actualitzar-se asíncronament per les consultes.
 reindexacions.advertencia.aturat=Actualment la tasca de reindexació en segon pla està aturada.
 
