--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2020,7 +2020,7 @@ anotacio.annex.detalls.annex.error=Aquest annext conté un error: {0}
 anotacio.annex.detalls.annex.processament.error=El processament d'aquest annex ha produit error
 anotacio.annex.detalls.annex.accio.reintentar=Reintentar processament
 anotacio.annex.detalls.annex.firmes.consultant=Validant les firmes del document...
-anotacio.annex.descarregar.error=S''ha produït un error descarregant l'annex: {0}
+anotacio.annex.descarregar.error=S''ha produït un error descarregant l''annex: {0}
 anotacio.annex.reintentar.success=L'annex s'ha processat correctament
 anotacio.annex.reintentar.error=S''ha produït un error reintentant el processament de l''annex: {0}
 
