#1432 Poder diferenciar entorn segons el color de la capçalera
Task-url: https://github.com/GovernIB/helium/issues/1432

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -41,6 +41,10 @@ entorn.form.titol.modificar=Modificar entorn
 entorn.form.camp.codi=Codi
 entorn.form.camp.nom=Nom
 entorn.form.camp.descripcio=Descripció
+entorn.form.legend.visualitzacio=Opcions de visualització de la capçalera
+entorn.form.visualitzacio.avis=Avís: S'ha de canviar d'entorn per carregar els canvis en la sessió i visualitzar-los
+entorn.form.camp.colorFons=Color fons
+entorn.form.camp.colorLletra=Color lletra
 
 entorn.permis.titol=Permisos de l'entorn
 entorn.permis.columna.principal=Principal
