#1439 Canvis en la pàgina de reindexacions
Task-url: https://github.com/GovernIB/helium/issues/1439

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -257,6 +257,7 @@ expedient.llistat.filtre.camp.meves.disabled=No disposa dels permisos suficients
 expedient.llistat.filtre.camp.grup=Només amb tasques de grup
 expedient.llistat.columna.expedient=Expedient
 expedient.llistat.columna.iniciat=Iniciat el
+expedient.llistat.columna.reindexarData=Data reindexació
 expedient.llistat.columna.finalitzat=Finalitzat el
 expedient.llistat.columna.tipus=Tipus
 expedient.llistat.columna.estat=Estat
@@ -2332,7 +2333,9 @@ reindexacions.tab.expedients=Expedients
 reindexacions.cua.pendents=Pendents
 reindexacions.taula.fila.title=Premi sobre la fila per consultar els expedients del tipus d'expedient
 reindexacions.dataConsulta=Data de la consulta
+reindexacions.cua=Cua de reindexacions pendents
 reindexacions.pendentsCua=Expedients pendents en la cua de reindexacions asíncrones
+reindexacions.taula=Expedients marcats amb error o amb data de reindexació
 reindexacions.columna.entorn=Entorn
 reindexacions.columna.tipus=Tipus d'expedient
 reindexacions.columna.codi=Codi
