#1430 Contemplar tipus expedient actualitzant handlers darrera versió
Task-url: https://github.com/GovernIB/helium/issues/1430

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -1701,11 +1701,13 @@ definicio.proces.desplegar.form.success=El desplegament de la definició de procé
 definicio.proces.desplegar.form.error=Error durant el desplegament de l''arxiu: {0}
 definicio.proces.desplegar.error.actualitzarExpedientActius=Error programant la acció massiva d'actualització d'expedients actius: {0}
 
-definicio.proces.actualitzar.confirmacio=S''han actualitzat correctament els handlers de la definició de procés {0} v.{1}
+definicio.proces.actualitzar.confirmacio.expedientTipus=S''han actualitzat correctament els handlers de la definició de procés {0} v.{1} del tipus d''expedient [{2} - {3}]
+definicio.proces.actualitzar.confirmacio.global=S''han actualitzat correctament els handlers de la definició de procés global {0} v.{1}
 definicio.proces.actualitzar.excepcio=Error actualitzant els handlers: {0}
 definicio.proces.actualitzar.error.arxiuNom=Arxiu amb extensió no suportada "{0}". Només se suporta la extensió .*ar
 definicio.proces.actualitzar.error.parse=El contingut del fitxer no s'ha pogut processar
-definicio.proces.actualitzar.error.jbpmKey=No hi ha cap definició de procés a l''entorn amb la clau "{0}" per actualitzar
+definicio.proces.actualitzar.error.jbpmKey.expedientTipus=No hi ha cap definició de procés al tipus d''expedient amb la clau "{0}" per actualitzar
+definicio.proces.actualitzar.error.jbpmKey.global=No hi ha cap definició de procés a l''entorn amb la clau "{0}" per actualitzar
 
 definicio.proces.desplegar.validacio.arxiu.buit=No s'ha seleccionat cap arxiu o no conté cap informació
 definicio.proces.desplegar.validacio.error.lectura=Error llegint l'arxiu a importar
