#1437 Afegir informació per cada permís en la gestió de permisos
Task-url: https://github.com/GovernIB/helium/issues/1437

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -2213,6 +2213,35 @@ permis.SUPERVISION=Supervisió
 permis.MANAGE=Gestió
 permis.REASSIGNMENT=Reassignació
 
+permis.READ.info=Permet a l'usuari tramitador llistar expedients i tasques i accedir a informació dels expedients com la informació bàsica, les dades, documents, cronograma, termini i tasques del propi usuari.
+permis.WRITE.info=Permet a l'usuari tramitador modificar la informació de l'expedient dins de la gestió de l'expedient.
+permis.CREATE.info=Permet crear expedients per al tipus d'expedient pel qual es defineix el permís.
+permis.DELETE.info=Permet a l'usuari tramitador esborrar expedients.
+permis.ADMINISTRATION.info=Inclou tots els permisos possibles de disseny de tipus d'expedient i de gestió d'expedients pel tipus d'expedient al qual es dóna aquest permís.
+permis.CANCEL.info=Permís per cancel·lar expedients. 
+permis.STOP.info=Permís per aturar la tramitació d'expedients.
+permis.RELATE.info=Permís per afegir i esborrar relacions amb altres expedients. Permet també l'accés a la gestió i processament d'anotacions de registre provinents de Distribucio cap a Helium com a backoffice de Distribucio.
+permis.DATA_MANAGEMENT.info=Permís per gestionar dades a la pipella de dades de l'expedient. Permet canviar el valor o afegir-ne de noves.
+permis.DOC_MANAGEMENT.info=Permís per gestionar documents a la pipella de documents de l'expedient. Permet canviar el contingut o afegir-ne de nous.
+permis.TERM_MANAGEMENT.info=Permís per gestionar terminis a la pipella de terminis de l'expedient. Permet modificar-los o afegir-ne de nous.
+permis.TASK_MANAGEMENT.info=Permís que permet cancel·lar, reassignar, suspendre i reprendre tasques.
+permis.TASK_SUPERVISION.info=Permís que permet veure les tasques de qualsevol usuari de l'expedient, no només els seus.
+permis.TASK_ASSIGN.info=Permís que permet la reassignació de tasques d'un expedient cap un altre rol o usuari.
+permis.LOG_READ.info=Permet l'accés a la pipella de logs de l'expedient tramitat.
+permis.LOG_MANAGE.info=Permet buidar els logs o retrocedir un expedient en tramitació.
+permis.TOKEN_READ.info=Permet accedir i llegir la informació dels tokens d'un expedient en tramitació.
+permis.TOKEN_MANAGE.info=Permet realitzar accions sobre els tokens com el canvi d'estat, consultar i retrocedir.
+permis.DESIGN_ADMIN.info=Permet dissenyar el tipus d'expedient sense restriccions.
+permis.DESIGN_DELEG.info=És un permís especial de disseny de tipus d'expedient que limita les accions a modificar els documents del tipus d'expedient i l'ordre i etiqueta dels valors de les enumeracions.
+permis.SCRIPT_EXE.info=Permet executar scripts per a un expedient en tramitació.
+permis.UNDO_END.info=Permet desfinalitzar un expedient.
+permis.DEFPROC_UPDATE.info=Permet canviar la versió de la definició de procés emprada en el tipus d'expedient.
+permis.ORGANIZATION.info=Organització
+permis.DESIGN.info=El permís de disseny permet dissenyar un tipus d'expedient sense restriccions. És equivalent a tenir els següents permisos de la nova interfície: Disseny admin, Disseny delegat
+permis.SUPERVISION.info=Consultar els expedients, buidar logs, retrocedir un expedient, veure les tasques pendents de qualsevol usuari, consultar i canviar l'estat d'un toquen a actiu i retrocedir-lo. Aquest permís s'usa en multituds de casos i no té una equivalència directa. Els permisos que són directament equivalents són: Tasca supervisar
+permis.MANAGE.info=Actualment no té equivalència i només es comprova en alguns llistats molt puntuals juntament amb altres permisos.
+permis.REASSIGNMENT.info=Es comprova aquest permís en les reassignacions de tasques. Seria equivalent al següent permís: Tasca assignar
+
 etiqueta.exp.id=Id de l'expedient
 etiqueta.exp.numero=Número d'expedient
 etiqueta.exp.titol=Títol de l'expedient
