#1389 Evitar augmentar versió quan s'importi un tipus d'expedient
Task-url: https://github.com/GovernIB/helium/issues/1389

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -862,6 +862,9 @@ expedient.tipus.importar.form.opcions.dadesBasiques=Incloure dades bàsiques (tít
 expedient.tipus.importar.form.opcions.sobreEscriure=Sobreescriure dades existents amb mateix codi
 expedient.tipus.importar.form.camp.codi=Codi
 
+expedient.tipus.importar.form.opcions.dadesBasiques.info= Es pot marcar aquesta opció per incloure la sobreescriptura de les dades bàsiques del tipus d'expedient. Les dades bàsiques són les del formulari de modificació de la informació de l'expedient tret del codi del tipus d'expedent.
+expedient.tipus.importar.form.opcions.sobreEscriure.info=Si el tipus d'expedient conté dades que coincideixin amb el codi de les dades que s'importen es pot marcar aquesta opció per sobreescriure la configuració o no marcar-la per conservar les dades del tipus de l'expedient tal i com estan.
+
 expedient.tipus.importar.form.error.arxiu.buit=No s'ha seleccionat cap arxiu o no conté cap informació
 expedient.tipus.importar.form.error.arxiu.erroni=El contingut de l''arxiu no es correspon amb una exportació de tipus d''expedient tal i com s''espera
 expedient.tipus.importar.form.error.lectura=Error llegint l'arxiu a importar
@@ -1671,6 +1674,9 @@ definicio.proces.importar.form.seleccionar=Seleccionar el contingut
 definicio.proces.importar.form.opcions.sobreEscriure=Sobreescriure dades existents amb mateix codi
 definicio.proces.importar.form.camp.codi=Codi
 definicio.proces.importar.form.camp.versio=Versió
+
+definicio.proces.importar.form.opcions.sobreEscriure.info=Si la definició de procés conté dades que coincideixin amb el codi de les dades que s'importen es pot marcar aquesta opció per sobreescriure la configuració o no marcar-la per conservar les dades de la definició de procés tal i com estan.
+
 
 definicio.proces.importar.form.error.arxiu.buit=No s'ha seleccionat cap arxiu o no conté cap informació
 definicio.proces.importar.form.error.arxiu.erroni=El contingut de l'arxiu no es correspon amb una exportació de definició de procés tal i com s'espera
